2011-01-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/generator/dynGen.cpp: Setup srand() with gettimeofday().

	* src/dmcs/OptDMCS.cpp: Remove X-Mas leftover casserole.

	* include/network/Client.tcc: Add support for DMCS_LOG_*.
	* include/network/Handler.tcc: Likewise.
	* src/network/Server.cpp: Likewise.
	* include/network/AsynClient.tcc: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/generator/staticGen.cpp: Likewise.
	* include/dmcs/ProgramOptions.h: Likewise.
	* src/generator/Makefile.am: Likewise.

	* include/dmcs/Log.h: Add support for configuring the logger from
	a config file.
	* src/dmcs/Log.cpp: Likewise.

	* configure.ac: Add --enable-stats for defining DMCS_STATS_INFO.

2011-01-10  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Send 0 instead of *bs = 0.

	* src/network/ThreadFactory.cpp: Check the outcome of result from
	MQ.

	* include/network/ThreadFactory.h: Let client be a member, again,
	for keeping information.

	* include/network/Server.h: Remove &. Fix losing information.

	* include/network/Handler.h: Let OutputThread be a member, for
	the sake of keeping value of other passed around information.
	* include/network/Handler.tcc: Likewise.

	* include/network/AsynClient.h: Add handle_answer.
	* include/network/AsynClient.tcc: Likewise.

	* include/dmcs/StreamingForwardMessage.h: Construct without
	conflict and set conflict later.

	* include/dmcs/StreamingBackwardMessage.h: Remove const result so
	that the serialization works.

	* include/dmcs/CommandTypeFactory.h: Reference for the
	constructor.

	* src/network/ThreadFactory.cpp: Use AsynClient for neighbors' thread.

	* include/network/Client.h: Inherit from BaseClient.
	* include/network/Client.tcc: Likewise.

	* include/network/Makefile.am: Add new header files.

	* include/network/AsynClient.h: New file.
	* include/network/AsynClient.tcc: Likewise.
	* include/network/BaseClient.h: Likewise.
