@@ -1,3 +1,10 @@
+2011-01-11  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* src/generator/ContextGenerator.cpp: Add support for DMCS_LOG_*.
+	* src/solver/RelSatSolver.cpp: Likewise.
+
+	* include/mcs/BeliefState.h: Fix argument-dependent name lookup.
+
 2011-01-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* src/generator/dynGen.cpp: Setup srand() with gettimeofday().
